# eTrading

./: .env.example  .gitignore  AGENTS.md  AI_ML_ASSESSMENT.md  ARCHITECTURE.md  CAPABILITY_AUDIT.md  CLAUDE.md  CLAUDE_ARCHIVE.md  GAPS.md  GETTING_STARTED.md  MARKET_ANALYZER_REQUIREMENTS.md  PROJECT_MASTER.md  PROJECT_STATUS_SESSION_JAN26.md  PendingTasks.txt  SAAS.md  SETUP.md  STATUS.md  TEST_GUIDE.md  TEST_PLAYBOOK.md  TRADING_PLAYBOOK.md  USER_GUIDE.md  WEEKEND_PLAN.md  allpackages.txt  config.yaml  example  portfolio.db  pyproject.toml  pytest.ini  requirement_cotrader.txt  requirements.txt  service_account.json  start-frontend.bat  start.bat  trading.db  wheel_state.json
.claude/: settings.local.json
alembic/: env.py
docker/: Dockerfile  docker-compose.yml
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.node.json  vite.config.ts
metals/: dxy.py  idea_engine.py  idea_evaluator.py  idea_generators.py  indicators.py  market_data.py  metal_config.json  metal_engine.py  metal_option_strategies.json  metal_strategy_defs.json  metal_trading.py  metals_options_portfolio_system_playbook_engine.md  option_chain.py  option_fetch.py  option_models.py
scripts/: migrate_to_postgres.py  setup_new_machine.sh
tests/: conftest.py  readme.txt
trading_bot/: .env  Architecture.txt  agents.py  auth.py  bot_runner.py  broker.py  broker_delete.py  broker_mock.py  command_center.py  config.py  config.yaml  config_manager.py  database.py  detailed_position.py  domain_main.py  domain_runner.py  domain_runner_working.py  event_handler.py  ui.py  (+22 more)
(+520 files in other folders)
